# simmerv

./: .gitmodules  Cargo.toml  README.md  run-riscv-tests.sh  rustfmt.toml
.github/workflows/: rust.yml
examples/sim/: main.rs  nonblocknoecho.rs  popup_terminal.rs
linux/: .gitattributes  initrd2+gdb.cpio  run-6.15.0-w-initrd2+gdb.sh  with-initrd.dtb
riscof/riscvrust/: riscof_riscvrust.py
riscof/riscvrust/env/: model_test.h
sim/: Cargo.toml
sim/src/: dummy_terminal.rs  main.rs  popup_terminal.rs
src/: bounded.rs  cpu.rs  csr.rs  dag_decoder.rs  default_terminal.rs  elf_analyzer.rs  fp.rs  lib.rs  memory.rs  mmu.rs  riscv.rs  rvc.rs  terminal.rs
src/device/: clint.rs  plic.rs  uart.rs  virtio_block_disk.rs
wasm/: build.sh
wasm/src/: lib.rs
wasm/web/: README.md  index.html  simmerv_wasm.js  simmerv_wasm_bg.wasm
