[package]
name = "simmerv"
version = "0.3.0"
edition = "2024"
description = "RISC-V emulator written in Rust"
authors = ["Takahiro <hogehoge@gachapin.jp>", "Tommy Thorn <tommy-github2@thorn.ws>"]
license = "MIT"
homepage = "https://github.com/tommythorn/simmerv"
repository = "https://github.com/tommythorn/simmerv"
exclude = [
  "linux/*",
  "screenshots/*",
  "wasm/*"
]

[workspace]
resolver = "3"
members = [".", "sim", "wasm"]
default-members = ["sim"]

[lints.clippy]
pedantic = { level = "warn", priority = -2 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
unreadable-literal = "allow"

[badges]
travis-ci = { repository = "tommythorn/simmerv" }

[dependencies]
fnv = "1.0.7"
num-traits = "*"
num-derive = "*"
wasm-timer = "0.2.5"
log = "0.4.26"
xmas-elf = "0.10.0"
anyhow = "1.0.98"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"]
